# braillify

./: .gitignore  .oxlintrc.json  .rustfmt.toml  AGENTS.md  Cargo.toml  bunfig.toml  math_section.txt  mutants.toml  oxlint.config.ts  package.json  plugin.ts  pyproject.toml  rule_map.json  tsconfig.json
.cargo/: mutants.toml
libs/braillify/: AGENTS.md  Cargo.toml  build.rs  trace_out.txt
libs/braillify/benches/: encode_math.rs  encode_native.rs  memory_dhat.rs  synthetic.rs
libs/braillify/benches/corpus/: kim_sowol.txt  kim_yujeong.txt  math_latex.txt  synthetic_hangul_100k.txt  synthetic_hangul_10k.txt  synthetic_hangul_1k.txt
libs/braillify/examples/: trace.rs
libs/braillify/proptest-regressions/: char_struct.txt  lib_main_tests.txt
libs/braillify/resources/: english_compounds.txt
libs/braillify/src/: char_shortcut.rs  char_struct.rs  cli.rs  encoder.rs  english_logic.rs  fraction.rs  ipa.rs  korean_char.rs  korean_part.rs  lib.rs  lib_coverage_tests.rs  lib_main_tests.rs  main.rs  math_symbol_shortcut.rs  rule.rs  rule_en.rs  split.rs  symbol_shortcut.rs  test_helpers.rs  unicode.rs  utils.rs  word_shortcut.rs
libs/braillify/src/jauem/: choseong.rs  jongseong.rs
libs/braillify/src/moeum/: jungsong.rs
libs/braillify/src/rules/: context.rs  emit.rs  engine.rs  english_shortform.rs  mod.rs  roman_mode.rs  rule_11.rs  rule_12.rs  rule_28.rs  rule_29.rs  rule_40.rs  rule_44.rs  rule_49.rs  rule_english_symbol.rs  token.rs  token_engine.rs  token_rule.rs  traits.rs
libs/braillify/tests/: cli_integration.rs  coverage_extra.rs  coverage_extra2.rs
libs/braillify/tests/snapshots/: coverage_extra__a_or_not_b.snap  coverage_extra__ab_therefore.snap  coverage_extra__abs_squared.snap  coverage_extra__abs_sum.snap  coverage_extra__abs_x.snap  coverage_extra__angle_abc.snap  coverage_extra__approx_equal.snap  coverage_extra__approx_xy.snap  coverage_extra__arc_ab.snap  coverage_extra__array_c_pipe_c.snap  coverage_extra__array_pipes.snap  coverage_extra__array_rcl.snap  coverage_extra__array_three_pipe_cols.snap  coverage_extra__arrow_label_xleftarrow.snap  coverage_extra__arrow_label_xrightarrow.snap  coverage_extra__arrow_left.snap  coverage_extra__arrow_lr.snap  coverage_extra__asymptotic.snap  coverage_extra__because_korean.snap  coverage_extra__because_lead.snap  coverage_extra__because_spaced.snap  coverage_extra__because_x_pos.snap  coverage_extra__bmatrix_negative.snap  coverage_extra__cases_three.snap  coverage_extra__cases_two.snap  coverage_extra__circle_shape.snap  coverage_extra__colon_math_eq.snap  coverage_extra__colon_math_ge.snap  coverage_extra__colon_math_gt.snap  coverage_extra__colon_math_gtrsim.snap  coverage_extra__colon_math_in.snap  coverage_extra__colon_math_le.snap  coverage_extra__colon_math_lesssim.snap  coverage_extra__colon_math_lt.snap  coverage_extra__colon_math_ne.snap  coverage_extra__colon_math_notin.snap  coverage_extra__colon_math_prec.snap  coverage_extra__colon_math_succ.snap  coverage_extra__colon_math_xor.snap  coverage_extra__combining_dot_a.snap  (+310 more)
libs/braillify/tests/snapshots2/: coverage_extra2__appendix_placeholder.snap  coverage_extra2__appendix_x_3.snap  coverage_extra2__bmatrix_long_row.snap  coverage_extra2__caret_alone.snap  coverage_extra2__caret_at_end_no_arg.snap  coverage_extra2__citation_year_suffix_a.snap  coverage_extra2__citation_year_suffix_b.snap  coverage_extra2__combining_mark_in_kor_with_space.snap  coverage_extra2__decimal_then_next_dot_number.snap  coverage_extra2__decimal_with_combining_mark.snap  coverage_extra2__decimal_with_super_following.snap  coverage_extra2__delta_eq_polysum.snap  coverage_extra2__delta_eq_polysum_2.snap  coverage_extra2__delta_eq_polysum_with_lead.snap  coverage_extra2__delta_eq_polysum_with_lead2.snap  coverage_extra2__detect_arccos.snap  coverage_extra2__detect_arcsin.snap  coverage_extra2__detect_arcsin_uppercase.snap  coverage_extra2__detect_arctan.snap  coverage_extra2__detect_bracket_digits.snap  coverage_extra2__detect_bracket_letter_only.snap  coverage_extra2__detect_bracket_letter_op.snap  coverage_extra2__detect_bracket_letter_super.snap  coverage_extra2__detect_func_call.snap  coverage_extra2__detect_func_call_g.snap  coverage_extra2__detect_letter_slash_letter.snap  coverage_extra2__detect_letter_slash_simple.snap  coverage_extra2__detect_relation_arb.snap  coverage_extra2__detect_signed_minus.snap  coverage_extra2__detect_signed_minus_unicode.snap  coverage_extra2__detect_unit_kg.snap  coverage_extra2__detect_unit_prefix.snap  coverage_extra2__detect_year_suffix_a.snap  (+129 more)
py-test/: pyproject.toml  test_braillify.py
(+795 files in other folders)
