[package]
name = "braillify"
version = "2.0.0"
edition.workspace = true
rust-version.workspace = true
authors = ["JeongMin Oh <owjs39@gmail.com>"]
description = "Rust 기반 크로스플랫폼 한국어 점역 라이브러리"
license = "Apache-2.0"
repository = "https://github.com/dev-five-git/braillify"
documentation = "https://braillify.kr"
categories = ["text-processing"]
keywords = ["braillify", "braille", "korean", "translation"]
readme = "../../README.md"
homepage = "https://braillify.kr"

[dependencies]
phf = { version = "0.13.1", features = ["macros"] }
clap = { version = "4.6.1", features = ["derive"], optional = true }
anyhow = { version = "1.0.102", optional = true }
rustyline = { version = "18.0.0", optional = true }
regex = "1.12.3"
once_cell = "1.21.4"
unicode-normalization = "0.1.25"
dhat = { version = "0.3.3", optional = true }

[dev-dependencies]
serde_json = "1.0.150"
proptest = "1.11.0"
assert_cmd = "2.2.2"
predicates = "3.1.4"
escargot = "0.5.15"
criterion = { version = "0.8.2", features = ["html_reports"] }
rstest = "0.23"

[target.'cfg(windows)'.build-dependencies]
embed-manifest = "1.5.0"

[features]
default = ["cli"]
cli = ["clap", "anyhow", "rustyline"]
wasm = []
dhat-heap = ["dep:dhat"]

[[bin]]
name = "braillify"
path = "src/main.rs"
required-features = ["cli"]

[[bench]]
name = "encode_native"
harness = false

[[bench]]
name = "encode_math"
harness = false

[[bench]]
name = "memory_dhat"
harness = false
